--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,5 @@ PROVIDER_ID=sampleprovider
 CLIENT_NAME=sampleprovider
 CLIENT_ID=76df2b35-a7e7-4ba5-9e10-06b8a24a0b02
 CLIENT_SECRET=WcKIUVPCf59fJHmcADwhY5zojA
-TOKEN_SCOPE=hub.variables.readwrite
+TOKEN_SCOPE="hub.variables.provide hub.variables.readwrite"
 PUBLISH_INTERVAL_MS=1000
