Align env defaults with python sample

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-HUB_HOST=192.168.10.108
+# Adresse deines u-OS Geräts (z. B. 192.168.10.100 oder 127.0.0.1, wenn direkt auf der Steuerung)
+HUB_HOST=192.168.10.100
 HUB_PORT=49360
 PROVIDER_ID=sampleprovider
 CLIENT_NAME=sampleprovider
